force-app/main/default/objects/AAR_Recognition__c/AAR_Recognition__c.object-meta.xml
<CustomObject>
    <label>AAR Recognition</label>
    <nameField>
        <displayFormat>RN-{0000}</displayFormat>
        <label>Recognition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AAR Recognitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>