force-app/main/default/objects/AAR_Recognition__c/fields/Awarding_Agency__c.field-meta.xml
<CustomField>
    <fullName>Awarding_Agency__c</fullName>
    <label>Awarding Agency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>