force-app/main/default/objects/AAR_Recognition__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Required</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AAR Recognitions</relationshipLabel>
    <relationshipName>AAR_Recognitions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>