force-app/main/default/objects/AAR_Recognition__c/fields/Date_Announced__c.field-meta.xml
<CustomField>
    <fullName>Date_Announced__c</fullName>
    <inlineHelpText>When the award was announced/received</inlineHelpText>
    <label>Date Announced</label>
    <type>Date</type>
</CustomField>