force-app/main/default/objects/AAR_Recognition__c/fields/External_URL__c.field-meta.xml
<CustomField>
    <fullName>External_URL__c</fullName>
    <label>External URL</label>
    <type>Url</type>
</CustomField>