force-app/main/default/objects/AAR_Recognition__c/fields/Recognition_Name__c.field-meta.xml
<CustomField>
    <fullName>Recognition_Name__c</fullName>
    <label>Recognition Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>