force-app/main/default/objects/AAR_Recognition__c/fields/UHN_AAR__c.field-meta.xml
<CustomField>
    <fullName>UHN_AAR__c</fullName>
    <label>UHN_AAR</label>
    <referenceTo>UHN_AAR__c</referenceTo>
    <relationshipLabel>AAR Recognitions</relationshipLabel>
    <relationshipName>AAR_Recognitions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>