force-app/main/default/objects/AAR_Recognition__c/recordTypes/Manual_Entry.recordType-meta.xml
<RecordType>
    <fullName>Manual_Entry</fullName>
    <active>true</active>
    <description
  >PI-added honour or award with no source system. Fully editable. This is the only record type on AAR_Recognition__c — all recognitions are PI-authored; no integration source exists for this object.</description>
    <label>Manual Entry</label>
</RecordType>