force-app/main/default/objects/AAR_Recognition__c/listViews/My_Current_Year_AAR.listView-meta.xml
<ListView>
    <fullName>My_Current_Year_AAR</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Current Year AAR</label>
</ListView>